--- a/pom.xml
+++ b/pom.xml
@@ -71,17 +71,14 @@
           <artifactId>quarkus-smallrye-openapi</artifactId>
       </dependency>
 
-    <!-- <dependency>
-      <groupId>io.quarkiverse.jooq</groupId>
-      <artifactId>quarkus-jooq</artifactId>
-      <version>2.0.0</version>
-    </dependency> -->
-    
-    <!-- <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-scheduler</artifactId>
+
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.28</version>
+        <scope>provided</scope>
     </dependency>
-     -->
+
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
@@ -94,18 +91,7 @@
       <scope>test</scope>
     </dependency>
     
-    <!-- <dependency>
-      <groupId>org.jooq</groupId>
-      <artifactId>jooq</artifactId>
-      <version>3.18.6</version>
-    </dependency> -->
-
-    <!-- <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>42.6.0</version>
-    </dependency> -->
-
+    
   </dependencies>
   <build>
     <plugins>
